# -*- coding: utf-8 -*-
[metadata]
name = object
summary = Semantic segmentation with unet, e.g Cercospora
description-file =
    README.md
author = Adnane
author-email = adnane.aitoussayer@etud.univ-angers.fr
version = 0.0.1
license = MIT
home-page = https://github.com/adnaneds/object
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    object

[entry_points]
deepaas.v2.model =
    object = object.api
